--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ ccm = "0.4.4"
 hkdf = "0.8.0"
 digest = "0.8.1"
 coap-lite = { version = "0.3.0", default-features = false }
+session_types = "0.3.1"
 
 [dev-dependencies]
 criterion = "0.3.0"
