--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ hkdf = "0.8.0"
 digest = "0.8.1"
 coap-lite = { version = "0.3.0", default-features = false }
 session_types = "0.3.1"
+rand = "0.6.0"
+rand_core = "0.3.1"
 
 [dev-dependencies]
 criterion = "0.3.0"
