deleting example code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,13 +14,16 @@ bench = false
 serde = { version = "1.0.97", default-features = false, features = ["derive", "alloc"] }
 serde_cbor = { version = "0.11.2", default-features = false, features = ["alloc"] }
 serde_bytes = { version = "0.11.1", default-features = false, features = ["alloc"] }
-x25519-dalek = { version = "0.5.2", default-features = false, features = ["u32_backend"] }
+x25519-dalek = "1"
 ed25519-dalek = { version = "0.9.1", default-features = false, features = ["u32_backend"] }
+rand_core = "0.5.1"
+
 sha2 = { version = "0.8.0", default-features = false }
 aes = "0.7.5"
 ccm = "0.4.4"
 hkdf = "0.8.0"
 digest = "0.8.1"
+rand = "*"
 coap-lite = { version = "0.3.0", default-features = false }
 
 [dev-dependencies]
