--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ serde_bytes = { version = "0.11.1", default-features = false, features = ["alloc
 x25519-dalek = "1"
 ed25519-dalek = { version = "0.9.1", default-features = false, features = ["u32_backend"] }
 rand_core = "0.5.1"
+eui-no-std = "0.3"
 
 sha2 = { version = "0.8.0", default-features = false }
 aes = "0.7.5"
