--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ bench = false
 serde = { version = "1.0.97", default-features = false, features = ["derive", "alloc"] }
 serde_cbor = { version = "0.11.2", default-features = false, features = ["alloc"] }
 serde_bytes = { version = "0.11.1", default-features = false, features = ["alloc"] }
-x25519-dalek = { version = "1.2.0", default-features = false, features = ["u32_backend"] }
+x25519-dalek-ng = { version = "1.1.1", default-features = false, features = ["u32_backend"] }
 rand_core = "0.5.1"
 eui-no-std = "0.3"
 
@@ -35,7 +35,7 @@ std = [
     "serde/std",
     "serde_cbor/std",
     "serde_bytes/std",
-    "x25519-dalek/std",
+    "x25519-dalek-ng/std",
     # Add this back in once it doesn't cause problems with thread_rng
     # "ed25519-dalek/std",
     "sha2/std",
