--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "oscore"
+name = "edhoc"
 version = "0.1.0"
-authors = ["Martin Disch <martindisch@gmail.com>"]
+authors = ["Ask Sejsbo <asse@itu.com>"]
 license = "MIT OR Apache-2.0"
 edition = "2018"
 readme = "README.md"
